final update to commit

--- a/index.html
+++ b/index.html
@@ -1,17 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <h1>Freelancer Forum</h1>
-    <h2>The average starting price is $30.</h2>
-    <script src ="script.js"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="index.css">
+  <title>Freelancer Forum</title>
 </head>
 <body>
-    <ul>
-        <li></li>
-    </ul>
-    
+  <div>
+    <h1></h1>
+    <h4></h4>
+    <h2 id="freelance2"></h2>
+  </div>
+  <ul id="names"> <h3>Name</h3>    
+  </ul>
+  <ul id="occupations"> <h3>Occupation</h3>
+  </ul>
+  <ul id="price"> <h3>Price</h3>
+  </ul>
+  <script src="script.js"></script>
 </body>
 </html>
